--- a/Урок 1/1.html
+++ b/Урок 1/1.html
@@ -22,7 +22,9 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const tCelsius = +prompt('Введите температуру в градусах Цельсия');
+  const tFahrenheit = (9 / 5) * tCelsius + 32;
+  alert(`Цельсий: ${tCelsius}, Фаренгейт: ${tFahrenheit.toFixed(1)}`);
 </script>
 </body>
 </html>
