--- a/Урок 1/2.html
+++ b/Урок 1/2.html
@@ -16,7 +16,9 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const name = 'Павел';
+  const admin = name;
+  console.log(admin);
 </script>
 </body>
 </html>
