--- a/Урок 1/3.html
+++ b/Урок 1/3.html
@@ -30,7 +30,59 @@ console.log(3 - 4 * 2);
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  /*
+  1. 10 + 10, получаем 20
+  2. 20 + "10", сложить просто так не получится, так как типы данных разные -
+    число и строка. JavaScript автоматически приведет число 20 в строку "20",
+    после чего произойдет конкатенация: "20" + "10" в результате получим "2010"
+  3. С помощью console.log выводим строку "2010" в консоль
+   */
+  console.log(10 + 10 + "10"); // "2010"
+
+  /*
+  1. 10 + "10", сложить просто так не получится, так как типы данных разные -
+    число и строка. JavaScript автоматически приведет число 10 в строку "10",
+    после чего произойдет конкатенация: "10" + "10" в результате получим "1010"
+  2. "1010" + 10, сложить просто так не получится, так как типы данных разные -
+    строка и число. JavaScript автоматически приведет число 10 в строку "10",
+    после чего произойдет конкатенация: "1010" + "10" в результате получим
+    "101010"
+  3. С помощью console.log выводим строку "101010" в консоль
+   */
+  console.log(10 + "10" + 10); // "101010"
+
+  /*
+  1. 10 + 10, получаем 20
+  2. Перед следующим сложением сработает унарный оператор +"10", который
+    превратит строку "10" в число 10
+  3. 20 + 10, получаем 30
+  4. С помощью console.log выводим число 30 в консоль
+   */
+  console.log(10 + 10 + +"10"); // 30
+
+  /*
+  1. Перед делением сработает унарный оператор -"", который превратит пустую
+    строку "" в число -0.
+  2. 10 / -0, получаем -Infinity
+  3. С помощью console.log выводим число -Infinity в консоль
+   */
+  console.log(10 / -""); // -Infinity
+
+  /*
+  1. Перед делением сработает унарный оператор +"2,5", который попытается
+    превратить строку "2,5" в число. Однако, в JavaScript разделителем дробной
+    части в числе является точка, а не занятая, как в данном примере, из-за
+    этого JavaScript не сможет превратить данную строку в число, мы получим
+    значение NaN
+  2. 10 / NaN, получаем NaN
+  3. С помощью console.log выводим число NaN в консоль
+   */
+  console.log(10 / +"2,5"); // NaN
+
+  /*
+  П.С. обратите внимание что Infinity и NaN относятся к типу number, то есть
+  считаются за числа в языке JavaScript.
+   */
 </script>
 </body>
 </html>
