--- a/Урок 2/1.html
+++ b/Урок 2/1.html
@@ -20,31 +20,31 @@
   let a = 1, b = 1, c, d;
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  В переменной C будет лежать 2 т.к. в переменной C присвоится значение переменной A
    */
   c = ++a;
-  console.log(c);
+  console.log(c); //2
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
-   */
+  В переменной D будет лежать 1 т.к. переменная C присвоится значение переменной B
   d = b++;
-  console.log(d);
+  console.log(d); //1
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  Будет производится операция сложения 2+3 т.к. в переменной A будет лежать 3,
+  а это значит 5 будет в переменной C
    */
   c = 2 + ++a;
-  console.log(c);
+  console.log(c); //5
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+  не разобрался
    */
   d = 2 + b++;
-  console.log(d);
+  console.log(d); //4
 
-  console.log(a);
-  console.log(b);
+  console.log(a); //3
+  console.log(b); //3
 </script>
 </body>
 </html>
