--- a/Урок 2/4.html
+++ b/Урок 2/4.html
@@ -30,8 +30,26 @@
 -->
 <script>
   "use strict";
+  
+ function sum(a, b) {
+    return a + b;
+  }
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  function difference(a, b) {
+    if (a > b) {
+      return a - b;
+    }
+    return b - a;
+  }
+
+  function multiplication(a, b) {
+    return a * b;
+  }
+
+  function division(a, b) {
+    return a / b;
+  }
+
 </script>
 </body>
 </html>
