--- a/Урок 2/2.html
+++ b/Урок 2/2.html
@@ -21,7 +21,13 @@
   let x = 1 + (a *= 2);
 
   /*
-  Ваш комментарий, почему переменные `x` и `a` хранят данные значения?
+  (a *= 2) = (a = a * 2); a = 2 * 2; a=4 
+  Вместо скобок используем 4:
+  let x = 1+4; x=5
+  
+  a=4
+  x=5
+  
    */
   console.log(x);
   console.log(a);
