--- a/Урок 3/1.html
+++ b/Урок 3/1.html
@@ -19,7 +19,17 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  var i;
+  for (let i = 0; i <= 10; i++) {
+    if (i === 0) {
+      console.log(`${i} - ноль`);
+    } else if (i % 2 === 1) {
+      console.log(`${i} - нечетное число`);
+    } else {
+      console.log(`${i} - четное число`);
+    }
+  }
+
 </script>
 </body>
 </html>
