--- a/Урок 3/3.html
+++ b/Урок 3/3.html
@@ -25,11 +25,12 @@
     },
     {
       id: 1,
-      price: 1000,
+      : 1000,
     },
   ];
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+	products.forEach(product => product.price *= 0.85);
+
 </script>
 </body>
 </html>
