--- a/Урок 4/1.html
+++ b/Урок 4/1.html
@@ -20,7 +20,35 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  function ProductES5(name, price) {this.name = name;
+    this.price = price;
+  }
+
+  ProductES5.prototype.make25Discount = function() {
+    this.price *= 0.75;
+  };
+
+  const productES5 = new ProductES5('Видеокарта', 90000);
+  console.log(`Название: ${productES5.name}, цена: ${productES5.price}`);
+  productES5.make25Discount();
+  console.log(`Название: ${productES5.name}, цена: ${productES5.price}`);
+
+
+  class ProductES6 {
+    constructor(name, price) {
+      this.name = name;
+      this.price = price;
+    }
+
+    make25Discount() {
+      this.price *= 0.75;
+    }
+  }
+
+  const productES6 = new ProductES6('Видеокарта', 90000);
+  console.log(`Название: ${productES6.name}, цена: ${productES6.price}`);
+  productES6.make25Discount();
+  console.log(`Название: ${productES6.name}, цена: ${productES6.price}`);
 </script>
 </body>
 </html>
