--- a/Урок 4/2.html
+++ b/Урок 4/2.html
@@ -50,7 +50,69 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  function PostES5(author, text) {
+    this.author = author;
+    this.text = text;
+    this.updatedAt = new Date();
+  }
+
+  PostES5.prototype.edit = function(text) {
+    this.text = text;
+    this.updatedAt = new Date();
+  };
+
+  const postES5 = new PostES5('Николай', 'Текст поста');
+  console.log(postES5);
+  postES5.edit('Новый текст поста');
+  console.log(postES5);
+
+  function AttachedPostES5(author, text) {
+    PostES5.call(this, author, text);
+    this.highlighted = false;
+  }
+
+  AttachedPostES5.prototype = Object.create(PostES5.prototype);
+  AttachedPostES5.prototype.constructor = AttachedPostES5;
+
+  AttachedPostES5.prototype.makeTextHighlighted = function() {
+    this.highlighted = true;
+    this.updatedAt = new Date();
+  };
+
+  const attachedES5 = new AttachedPostES5('Николай', 'Текст поста');
+  console.log(attachedES5);
+  attachedES5.makeTextHighlighted();
+  attachedES5.edit('Новый текст закрепленной поста');
+  console.log(attachedES5);
+
+
+  class PostES6 {
+    constructor(author, text) {
+      this.author = author;
+      this.text = text;
+      this.date = new Date();
+    }
+
+    edit(text) {
+      this.text = text;
+      this.date = new Date();
+    }
+  }
+
+  const postES6 = new PostES6('Николай', 'Текст статьи');
+  console.log(postES6);
+  postES6.edit('Новый текст статьи');
+  console.log(postES6);
+
+  class AttachedPostES6 extends PostES6 {
+
+    highlighted = false;
+    makeTextHighlighted() {
+
+      this.date = new Date();
+    }
+  }
+
 </script>
 </body>
 </html>
