--- a/Урок 5/3.html
+++ b/Урок 5/3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -56,13 +56,15 @@
   1. Необходимо вывести сообщение в консоль "все теги прогрузились", когда все
   теги будут созданы браузером.
   */
-
+  document.addEventListener(
+    'DOMContentLoaded',
+    () => console.log("все теги прогрузились"));
 
   /*
   2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
   ресурсы страницы будут загружены.
   */
-
+	window.addEventListener('load', () => console.log("страница загрузилась"));
 
   /*
   3. При клике на какой-либо тег на странице в консоль должно выводиться
@@ -79,7 +81,9 @@
   4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
   "Вы навели на textarea."
    */
-
+  document
+    .querySelector('textarea')
+    .addEventListener('mouseover', () => console.log("Вы навели на textarea."));
 
   /*
   5. Необходимо повесить событие клика на тег ul. В обработчике события в
@@ -100,6 +104,9 @@
   /*
   7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
    */
+  document
+    .querySelectorAll('li:nth-child(2n)')
+    .forEach(el => el.style.backgroundColor = 'red');
 
 </script>
 </body>
