--- a/Урок 6/1.html
+++ b/Урок 6/1.html
@@ -38,22 +38,35 @@
 
 <script>
   "use strict";
-
+  
   /*
   1. Установите всем элементам с классом "productName" размер шрифта 24px.
    */
-
+  document
+    .querySelectorAll('.productName')
+    .forEach(el => el.style.fontSize = '24px');
 
   /*
   2. Установите всем элементам с классом "product" внешний отступ справа 50px.
    */
-
+  document
+    .querySelectorAll('product')
+	.forEach(el => el.style.frontSize = '50px');
 
   /*
   3. При клике на кнопку "В корзину" название кнопки должно поменяться на
   "Добавлено" и кнопка должна стать неактивной.
    */
-
+  document.body.addEventListener('click', e => {
+    const button = e.target;
+	if (button.tagName !== "Button") {
+	  return:
+	}
+	button.textContent = 'Добавлено':
+	button.Disabled = true;
+  });
+	
+   
 
   /*
   4. Создайте полную (глубокую) копию элемента с классом product, измените в
@@ -63,13 +76,18 @@
   отображенный товар на странице на созданную копию. У данной копии также
   должен правильно работать код из 3-го задания.
    */
-
+  const productCopy = document.querySelectorAll('.product').cloneNode(true);
+  productCopy
+    .querySelectorAll('img')
+	.scr = 'https://picsum.photos/id/1080/200/300';
+  productCopy.querySelector('.productName').textContent = "Товар 4";
+  document.querySelector('.product:last-of-type').replaceWith(productCopy);
 
   /*
   5. По истечению 2 секунд с момента открытия страницы первый товар должен быть
   удален из html.
    */
-
+  setTimeout(() => document.querySelector('.product').remove(), 2000);
 
 </script>
 </body>
