--- a/Урок 7/1.html
+++ b/Урок 7/1.html
@@ -59,7 +59,20 @@
     X6: "Знаю, программирование это нелегко.",
     H99: "Однако, программирование, в итоге, принесет свои плоды.",
   };
+  
+  let activeLinkEl = document.querySelector('.active');
+  const textDivEl = document.querySelector('div.text');
+  document.querySelector('.nav-tabs').addEventListener('click', event => {
+    if (!event.target.classList.contains('nav-link')) {
+      return;
+    }
 
+    activeLinkEl.classList.remove('active');
+    event.target.classList.add('active');
+    activeLinkEl = event.target;
+
+    textDivEl.textContent = panelText[event.target.parentElement.dataset.text];
+  });
 
   /*
   2. Необходимо сделать так, чтобы при изменении input'а менялся и размер шрифта
@@ -67,6 +80,13 @@
   шрифт у текста, никакого резкого увеличения шрифта не должно быть при
   перетаскивании ползунка.
    */
+
+  const divEl = document.getElementById('inputDiv');
+  const inputEl = document.querySelector('input');
+  inputEl.value = Number.parseInt(getComputedStyle(divEl).fontSize).toString();
+  inputEl.addEventListener('input', event => {
+    divEl.style.fontSize = `${event.target.value}px`;
+  });
 
 
 </script>
